[Y26W2-201] feat: 코드 래빗 리뷰 반영
- 널 세이프 처리 추가
- todo 작성
- 미사용 메서드 제거